# python-data-science-bootcamp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTERVIEW_PREP_SUMMARY.txt  LICENSE  Makefile  README.md  RECRUITER.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  bootcamp.spec  build_windows.bat  docker-compose.prod.yml  docker-compose.yml  launcher.py  pyproject.toml  requirements.txt  run_bootcamp.py
.claude/: settings.local.json
app/: __init__.py  app.py  content_loader.py  execution_engine.py
datasets/: README.md  comentarios_productos.csv  estudiantes.csv  retencion_clientes.csv  soporte_tickets.csv  transporte.csv  ventas_tienda.csv
docs/: ARQUITECTURA_PRODUCTO.md  BUILD_INSTALLER.md  CATALOGO_PRODUCTO.md  GUIA_EVALUACION.md  INDEX.md  MOBILE_APP.md  aula-ia-y-problemas-frecuentes.md  clase-prueba-sugerida.md  cronograma-referencial.md  demo-capacitaciones-escalable.md  demo-reunion-jueves.md  desafio-tecnico-preparacion.md  despliegue-seguro-y-operacion.md  entorno-interactivo.md  entrevista-skillnest-preparacion.md  entrevista-skillnest-presentacion-v2.md  entrevista-skillnest-presentacion.md  estandar-alto-gap-bootcamp.md  herramientas-pedagogicas-de-aula.md  implementacion-v1-skillnest-san-nicolas.md  instructor-guide.md  metodologia-docente.md  muestra-producto-para-skillnest.md  perfil-estudiantes.md  plan-evaluacion.md  portal-estudiante-y-app-movil.md  portfolio-high-standard.md  preparacion-entrevista-imprimible.md  proceso-seleccion-skillnest.md  reunion-pitch.md  revision-otros-repos-e-insights.md  student-guide.md  (+3 more)
(+469 files in other folders)
